// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<label
  className="cf-9tm70p"
>
  FormLabel
</label>
`;

exports[`should render hidden 1`] = `
<label
  className="cf-9tjdfu"
>
  FormLabel
</label>
`;
